# amazon-sns-fastapi-subscription

./: README.ja.md  README.md  hello.py  pyproject.toml
app/: main.py  models.py  settings.py  signature.py  subscriber.py
tests/: test_main.py
